--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/thunderrun/flat-to-tree/issues"
   },
-  "homepage": "https://github.com/thunderrun/flat-to-tree#readme"
+  "homepage": "https://github.com/thunderrun/flat-to-tree#readme",
+  "keywords": [
+    "flat to tree"
+  ]
 }
